--- a/calc.style.css
+++ b/calc.style.css
@@ -1,5 +1,5 @@
 body {
-  background-color:  brown;
+    background-image: url("http://i.imgur.com/MHxNfm2.jpg");
 }
 
 .container {
@@ -39,8 +39,8 @@ h3 {
 }
 
 #keypad {
-  background-color: #949998;
-  border: 5px solid #000000;
+  background-color:#4f321a;
+  border: 3px solid #000000;
   width: auto;
   padding-bottom: 10px;
   margin-right: auto;
@@ -54,4 +54,15 @@ h3 {
   float: right;
     
 
+}
+h1{
+  font-family: 'Anton', sans-serif;
+  text-shadow: 3px 2px orange;
+  letter-spacing: 2px;
+  color:#4f321a;
+  
+}
+h4{
+   font-family: 'Anton', sans-serif;
+  size:42px;
 }
