--- a/css/twitch.style.css
+++ b/css/twitch.style.css
@@ -52,9 +52,10 @@ h1 {
 }
 .center {
  
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+     margin: auto;
+    width: 50%;
+   
+    padding: 10px;
 }
 .container-fluid {
   overflow: auto;
