--- a/css/wvstyle.css
+++ b/css/wvstyle.css
@@ -1,16 +1,43 @@
+body > div
+{
+ transition:all 0.3s ease;
+}
+
+a {
+  color: black;
+}
+a:hover {
+  text-decoration: none;
+}
+#boxed:hover{
+  transition-timing-function: ease-in-out;
+  transition:all 0.15s ease;
+  -webkit-transition-timing-function: ease-in-out;
+ background: #36c42f;
+  text-decoration: none;
+  color: white;
+  -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+        transform: scale(1.2);
+}
 #boxed {
-  
- max-width: 80%;
+  padding: 7px;
+ max-width: 400px;
+  min-width: 250px;
   font-size: 1em;
-border: solid green 1px;
   background: beige;
   margin:auto;
+  margin-bottom: 2px;
+  border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+
 }
 
 h2 {
   text-align: center;
   font-family: 'Gloria Hallelujah', cursive;
-  font-size: 5vw;
+  font-size: 1.5em;
 }
 
 .center-block {
@@ -20,12 +47,17 @@ h2 {
 }
 
 .container {
-  padding: 50px;
+  padding: 10px;
   
+}
+.fb {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 img {
-  width: 50%;
+  width: 70%;
   height: auto;
   display: block;
   margin-left: auto;
